k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  
  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        #image: mongo:5.0.5
        ports:
        - containerPort: 80
        
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: frontend-service

spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # Port opened on the node this is deployed on
      # nodePort: 30000
