k8s/mongo.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  # use 1 replica to prevent storage access problems (could use StatefulSets)
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  
  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb
        image: mongo:5.0
        ports:
        - containerPort: 27017
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  # same as mongo deployment -> used to forward traffic to pod
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 8000
      # pod port (same as container port)
      targetPort: 27017
